# SPDX-FileCopyrightText: Copyright (c) The helly25/mbo authors (helly25.com)
# SPDX-License-Identifier: Apache-2.0
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

"""CircleCI API command line tools."""

module(
    name = "circleci",
    version = "0.0.0",
    repo_name = "com_helly25_circleci",
)

_PYTHON_VERSION = "3.12"

_PYTHON_VERSION_SNAKE = _PYTHON_VERSION.replace(".", "_")

bazel_dep(name = "bazel_skylib", version = "1.6.1")

bazel_dep(name = "rules_python", version = "0.34.0", dev_dependency = True)

bazel_dep(name = "rules_mypy", version = "0.6.0")
bazel_dep(name = "aspect_rules_py", version = "0.8.0")

bazel_dep(name = "buildifier_prebuilt", version = "6.4.0", dev_dependency = True)

python = use_extension(
    "@rules_python//python/extensions:python.bzl",
    "python",
    dev_dependency = True,
)
python.toolchain(
    configure_coverage_tool = True,
    is_default = True,
    python_version = _PYTHON_VERSION,
)
use_repo(
    python,
    "python_" + _PYTHON_VERSION_SNAKE,
    "python_versions",
)

pip = use_extension(
    "@rules_python//python/extensions:pip.bzl",
    "pip",
    dev_dependency = True,
)
pip.parse(
    enable_implicit_namespace_pkgs = True,
    experimental_index_url = "https://pypi.org/simple",
    hub_name = "my_pip_deps",
    python_version = _PYTHON_VERSION,
    requirements_lock = "//:requirements_lock.txt",
)
use_repo(pip, "my_pip_deps")

types = use_extension("@rules_mypy//mypy:types.bzl", "types")
types.requirements(
    name = "pip_types",
    pip_requirements = "@my_pip_deps//:requirements.bzl",
    requirements_txt = "//:requirements.in",
)
use_repo(types, "pip_types")

tools = use_extension("@aspect_rules_py//py:extensions.bzl", "py_tools")
tools.rules_py_tools()
use_repo(tools, "rules_py_pex_2_3_1")
